[project]
name = "api-scan"
version = "0.1.0"
description = "MCP server for analyzing Huawei Cloud API documentation"
authors = [
    { name = "Lance52259", email = "your.email@example.com" }
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0"
]
requires-python = ">=3.6"

[project.scripts]
api-scan = "scan.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scan"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-asyncio",
]
